--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -1,76 +1,69 @@
 .card {
 	display: flex;
 	flex-direction: column;
-	border-radius: 10px;
-	list-style: none;
 	position: relative;
-  }
-  
-  .card__title {
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;
-	margin-top: 0;
-	margin-bottom: 0;
-  }
-  
-  .card__image {
-	width: 282px;
+	list-style: none;
+}
+
+.card__image {
 	height: 282px;
-	border-radius: 10px 10px 0px 0px;
+	width: 282px;
+	border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.card__trashButton {
+	position: absolute;
+	top: 23px;
+	right: 16px;
+	height: 14px;
+	width: 15px;
+	background: transparent url("../images/trash.svg") center no-repeat;
+	border: none;
 	cursor: pointer;
-  }
-  
-  .card__description {
+}
+
+.card__trashButton:hover {
+	opacity: .5;
+}
+
+.card__description {
 	display: flex;
 	background-color: white;
-	color: black;
 	padding-top: 25px;
 	padding-bottom: 25px;
 	padding-left: 20px;
 	padding-right: 20px;
 	align-items: center;
 	justify-content: space-between;
-	border-radius: 0px 0px 10px 10px;
-  }
-  
-  .card__delete-button {
-	background: transparent url(../images/Trash\ Button.svg) center no-repeat;
-	width: 18px;
-	min-width: 18px;
-	height: 19.3px;
-	border: none;
-	cursor: pointer;
-	position: absolute;
-	top: 18px;
-	right: 15px;
-	transition: opacity 0.5s;
-  }
-  
-  .card__delete-button:hover {
-	opacity: 0.5;
-  }
-  
-  .card__like-button {
-	background: transparent url(../images/like\ button.svg) center no-repeat;
+	border-end-end-radius: 10px;
+	border-end-start-radius: 10px;
+}
+
+.card__title {
+	font-size: 24px;
+	line-height: 29px;
+	font-weight: 900;
+	color: black;
+	margin-top: 0;
+	margin-bottom: 0;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.card__like-button {
+	background: transparent url(../images/like-button.svg) center no-repeat;
 	width: 21px;
-	min-width: 21px;
 	height: 18px;
 	border: none;
 	cursor: pointer;
-	transition: opacity 0.5s;
-  }
-  
-  .card__like-button:hover {
+}
+
+.card__like-button:hover {
 	opacity: 0.5;
-  }
-  
-  .card__like-button_active {
-	background: url(../images/active\ like\ button.svg) center no-repeat;
-	width: 21px;
-	min-width: 21px;
-	height: 18px;
-	border: none;
-	cursor: pointer;
-  }
-  
+}
+
+.card__like-button_active {
+	background-image: url(../images/like-buttonActive.svg);
+}
