--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -1,203 +1,235 @@
 .modal {
   display: flex;
+  visibility: hidden;
   position: fixed;
   top: 0;
-  left: 0;
-  bottom: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
+  bottom: 0;
+  left: 0;
   padding: 0 19px;
-  visibility: none;
-  pointer-events: none;
   opacity: 0;
-  transition: visibility 0s 0.6s, opacity 0.6s linear;
+  transition: visibility 0.5s, opacity 0.5s linear;
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal_opened {
   visibility: visible;
-  pointer-events: all;
   opacity: 1;
-  transition: visibility 0s, opacity 0.6s linear;
 }
 
 .modal__container {
-  background-color: #fff;
-  margin: auto;
-  padding: 36px;
-  border-radius: 10px;
+  height: 330px;
+  width: 430px;
+  margin: auto auto;
+  padding: 34px 36px 36px;
   position: relative;
-  max-width: 430px;
-  display: flex;
-  flex-direction: column;
+  border-radius: 10px;
+  box-shadow: 0 0 0 25px rgba(0, 0, 0, 0.15);
+  background-color: #fff;
 }
 
-.modal__container_type_image {
+.modal__container_confirm {
+  max-height: 181px;
+}
+
+.modal__container_avatar {
+  max-height: 272px;
+}
+
+.modal__close {
+  background-image: url("../images/close-button.svg");
+  position: absolute;
+  bottom: calc(100% + 5px);
+  left: calc(100% + 5px);
+  border: none;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-size: contain;
   background-color: transparent;
-  display: flex;
-  max-width: 75vw;
-  max-height: 75vh;
-  width: auto;
-  height: auto;
-  padding: 0;
+}
+
+.modal__close:hover {
+  opacity: 0.6;
+  transition: 0.5s ease-in;
+  cursor: pointer;
 }
 
 .modal__heading {
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter";
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
   color: #000;
-  margin: 0 0 24px;
-}
-
-.modal__close {
-  width: 40px;
-  height: 40px;
-  background-image: url("../images/Close\ Icon.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  border: none;
-  background-color: transparent;
-  cursor: pointer;
-  position: absolute;
-  bottom: calc(100% + 5px);
-  left: calc(100% + 5px);
-}
-
-.modal__close:hover {
-  opacity: 0.5;
 }
 
 .modal__form {
-  max-width: 358px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
+  display: flex;
+  flex-direction: column;
 }
 
-.modal__input {
-  border: none;
-  border-bottom: 1px solid #a9a9a9;
-  width: 100%;
-  margin-top: 30px;
-  padding-bottom: 13px;
+.modal__label {
+  position: relative;
 }
 
-.modal__input::placeholder {
-  color: #a9a9a9;
+.modal__form-input {
+	height: 50px;
+	border-top: 1px;
+	border-right: 1px;
+	border-left: 1px;
+	border-color: rgba(0, 0, 0, 0.2);
+	margin-bottom: 30px;
+	padding: 0;
+	width: 100%;
+}
+
+.modal__input_type_error {
+	border-bottom: solid 1px #ff0000;
 }
 
 .modal__error {
-  font-size: 12px;
-  line-height: 15px;
-  color: #ff0000;
-  opacity: 0;
-  position: relative;
-  top: calc(100% + 5px);
-  left: 0;
-  transition: opacity 0.3s;
-}
-
-.modal__error_visible {
-  opacity: 1;
-}
-.modal__input_type_error {
-  width: 100%;
-  box-sizing: border-box;
-  border: none;
-  border-bottom: 1px solid red;
-}
-
-.modal__image {
-  max-width: 100%;
-  max-height: 100%;
-  object-fit: cover;
-}
-
-.modal__caption {
-  font-family: "Inter", Arial, sans-serif;
-  margin: 0;
-  font-style: normal;
   font-weight: 400;
   font-size: 12px;
-  line-height: 14.5px;
+  line-height: 1.2;
+  color: #ff0000;
+  margin-top: 5px;
+  margin-bottom: 13px;
   position: absolute;
-  top: calc(100% + 10px);
+  top: 50px;
   left: 0;
-  color: #fff;
+}
+
+.modal__error-visible {
+  display:block;
+}
+
+.modal__form-input::placeholder {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 17px;
+	color: #c4c4c4;
 }
 
 .modal__button {
-  background: transparent url(../images/Blank\ Black\ Button.svg) center
-    no-repeat;
-  color: #fff;
-  width: 100%;
-  height: 50px;
-  margin-top: 48px;
-  margin-left: auto;
-  border: none;
-  border-radius: 2px;
+	height: 50px;
+	line-height: 22px;
+	font-size: 18px;
+	font-weight: 400;
+	background-color: #000;
+	color: #fff;
+	margin-top: 18px;
+	padding: 0;
+	cursor: pointer;
+}
+
+.modal__button_disabled {
+  background-color: gray;
+  cursor: not-allowed;
+}
+
+.modal__button:hover {
+  opacity: 0.6;
+  transition: 0.5s ease-in;
   cursor: pointer;
+}
+
+.modal__button_disabled:hover { 
+  opacity: 1;
+  cursor: default;
 }
 
 .modal__button:hover:not(:disabled) {
   opacity: 0.8;
+  cursor: pointer;
 }
 
-.modal__button:disabled {
-  background: transparent url(../images/blank\ submit\ button\ disabled.svg)
-    center no-repeat;
-  color: #a9a9a9;
-  cursor: default;
+.modal__container-preview {
+  position: relative;
+  height: 100%;
+  margin: auto auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-@media screen and (max-width: 755px) {
+.modal__close_preview {
+  top: -40px;
+  right: -40px;
+  margin: 0;
+  padding: 0;
+}
+
+.modal__preview {
+  position: relative;
+  max-width: 80%;
+}
+
+.modal__image {
+  max-width: 100%;
+  max-height: 540px;
+}
+
+.modal__caption {
+  background-color: transparent;
+  margin-top: 12px;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+@media screen and (min-width: 380px) and (max-width: 630px) {
+  .modal__heading {
+    font-size: 18px;
+    line-height: 22px;
+  }
   .modal__close {
     width: 26px;
     height: 26px;
-    bottom: calc(100% + 25px);
-    left: calc(90% + -8px);
+    left: calc(100% - 30px);
+    margin-bottom: 13px;
   }
 
-  .modal__container {
-    max-width: 282px;
-    padding: 25px 22px;
-  }
-  .modal__heading {
-    font-family: "Inter", Arial, sans-serif;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 18px;
-    line-height: 22px;
-    color: #000;
-    margin: 0 0 45px;
-  }
-  .modal__form {
-    max-width: 238px;
-  }
   .modal__button {
-    height: 46px;
-    margin-top: 45px;
+    font-size: 14px;
+    line-height: 17px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 425px) {
-  .modal__image {
-    width: 240px;
-    height: 299px;
+@media screen and (min-width: 320px) and (max-width: 660px) {
+  .modal__heading {
+    font-size: 18px;
+    line-height: 22px;
   }
-  .modal__caption {
-    left: 20px;
-    top: calc(100% - 10px);
-  }
+
   .modal__close {
-    width: 30px;
-    height: 30px;
-    bottom: calc(100% + -20px);
-    left: calc(90% + 10px);
+    width: 26px;
+    height: 26px;
+    left: calc(100% - 30px);
+    margin-bottom: 13px;
+  }
+
+  .modal__button {
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 660px) {
+  .modal__container {
+    top: 136px;
+    max-height: 300px;
+    max-width: 100%;
+  }
+}
+
+@media screen and (min-width: 660px) and (max-width: 880px) {
+  .modal__container {
+    max-height: 300px;
+    max-width: 100%;
   }
 }
