--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -1,139 +1,167 @@
 .profile {
   display: flex;
   align-items: center;
-  padding-top: 40px;
+  margin-bottom: 51px;
+  margin-top: 40px;
+}
+
+.profile__avatar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* height: 120px;
+	width: 120px; */
+	/* border-radius: 50%; */
+	object-fit: cover;
+	background-position: center;
+	
+}
+
+.profile__avatar-button {
+  background: transparent url(../images/edit-avatar-icon.svg) no-repeat center;
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  margin-right: 30px;
+  border: 1px solid white;
+  border-radius: 50%;
+  visibility: hidden;
+  z-index: 1;
+}
+
+.profile__image {
+	height: 120px;
+	width: 120px;
+	border-radius: 50%;
+	object-fit: cover;
+	background-position: center;
+	margin-right: 30px;
+	z-index: -1;
+}
+
+.profile__avatar .profile__image,
+.profile__avatar .profile__avatar-button {
+  transition: visibility 0.15s, opacity 0.2s ease-in-out;
+}
+
+.profile__avatar:hover .profile__avatar-button {
+  cursor: pointer;
+  visibility: visible;
+}
+
+.profile__avatar:hover .profile__image {
+  cursor: pointer;
+  opacity: 0.2;
 }
 
 .profile__info {
   display: grid;
-  grid-template-areas:
-    "title button"
-    "description description";
+  grid-template-areas: "title button" "description description";
   grid-template-columns: minmax(auto, 373px) auto;
-  grid-gap: 9px 17px;
-}
-
-.profile__edit-button {
-  background: transparent url(../images/edit\ button.svg) center no-repeat;
-  height: 24px;
-  width: 24px;
-  grid-area: button;
-  border: 1px solid white;
-  align-self: center;
-  cursor: pointer;
-  transition: opacity 0.5s;
-}
-
-.profile__edit-button:hover {
-  opacity: 0.5;
-}
-
-.profile__add-button {
-  background: transparent url(../images/add\ button.svg) center no-repeat;
-  width: 150px;
-  height: 50px;
-  margin-left: auto;
-  border: 2px solid white;
-  border-radius: 2px;
-  cursor: pointer;
-  transition: opacity 0.5s;
-}
-
-.profile__add-button:hover {
-  opacity: 0.5;
+  align-items: center;
 }
 
 .profile__title {
-  font-family: "Inter", Arial, sans-serif;
   font-size: 42px;
   line-height: 48px;
   font-weight: 500;
   grid-area: title;
+  margin: 0 0 16px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.profile__edit-button {
+  background: transparent url(../images/edit-button.svg) center no-repeat;
+  height: 24px;
+  width: 24px;
+  grid-template-areas: "button";
+  border: 1px solid white;
+  margin-left: 18px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.profile__edit-button:hover {
+  opacity: 0.6;
+}
+
+.profile__description {
+  font-size: 18px;
+  line-height: 22px;
+  grid-template-areas: "description";
   margin: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
 
-.profile__description {
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 18px;
-  line-height: 22px;
-  font-weight: 400;
-  grid-area: description;
-  margin-top: 0;
-  margin-bottom: 0;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
+.profile__add-button {
+  background: transparent url(../images/add-button.svg) center no-repeat;
+  height: 50px;
+  width: 150px;
+  margin-left: auto;
+  border: 2px solid #ffffff;
+  cursor: pointer;
+  border-radius: 2px;
 }
 
-.profile__image {
-  height: 120px;
-  width: 120px;
-  border-radius: 50%;
-  object-fit: cover;
-  background-position: center;
-  margin-right: 24px;
+.profile__add-button:hover {
+  opacity: 0.6;
 }
-@media screen and (max-width: 480px) {
+
+@media screen and (min-width: 320px) and (max-width: 760px) {
   .profile {
     flex-direction: column;
-  }
-
-  .profile__info {
-    display: flex;
-    flex-wrap: wrap;
     width: 100%;
-    justify-content: center;
-  }
-
-  .profile__description {
-    width: 100%;
-    text-align: center;
-  }
-
-  .profile__add-button {
     margin: 0;
-    width: 100%;
-    cursor: pointer;
   }
-}
 
-@media screen and (max-width: 425px) {
-  .profile__description {
-    margin-top: 0;
+  .profile__avatar-button {
+	margin: 42px 0 0;
+  }
+
+  .profile__image {
+    margin: 42px 0 0;
   }
 
   .profile__title {
     font-size: 22px;
-    min-width: 201px;
-    max-width: 222px;
+    margin-top: 30px;
+    margin-bottom: 14px;
+    line-height: 27px;
+    max-width: 196px;
   }
-}
-
-@media screen and (max-width: 320px) {
-  .profile {
-    text-align: center;
-  }
-
-  .profile__image {
-    margin: 0px auto 26.25px;
-  }
-
-  .profile__title {
-    line-height: 26.63px;
+  .profile__info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    max-width: 282px;
   }
 
   .profile__edit-button {
     height: 18px;
     width: 18px;
-    align-self: baseline;
+    margin-top: 15px;
+    margin-bottom: 0;
+    background-size: 7px 7px;
   }
 
   .profile__description {
+    width: 100%;
+    text-align: center;
     font-size: 14px;
-    line-height: 16.94px;
+    line-height: 17px;
+  }
+
+  .profile__add-button {
+    margin-top: 36px;
     margin-bottom: 36px;
+    width: 282px;
+    padding: 0;
+    margin-right: 19px;
+    margin-left: 19px;
+    background-size: 16px 16px;
   }
 }
