--- a/src/blocks/footer.css
+++ b/src/blocks/footer.css
@@ -1,28 +1,24 @@
 .footer {
+	padding-bottom: 60px;
+	padding-top: 67px;
+}
+
+.footer__copyright {
 	color: #545454;
-  }
-  
-  .footer__copyright {
-	font-family: "Inter", Arial, sans-serif;
-	font-weight: 400;
 	font-size: 18px;
+	font-weight: 400;
 	line-height: 22px;
-	margin-top: 67px;
-	margin-bottom: 0;
-  }
-  
-  @media screen and (max-width: 1280px) {
-	.footer__copyright {
-	  margin-bottom: 60px;
+	margin: 0;
+}
+
+@media screen and (min-width: 320px) and (max-width: 760px) {
+	.footer {
+		padding-top: 48px;
+		padding-bottom: 36px;
 	}
-  }
-  
-  @media screen and (max-width: 320px) {
+
 	.footer__copyright {
-	  font-size: 14px;
-	  line-height: 14px;
-	  margin-top: 48px;
-	  margin-bottom: 36px;
+		font-size: 14px;
+		line-height: 17px;
 	}
-  }
-  
+}
