--- a/src/blocks/page.css
+++ b/src/blocks/page.css
@@ -1,26 +1,27 @@
 .page {
+	/* position: relative; */
 	background-color: black;
 	color: white;
 	font-family: "Inter", Arial, sans-serif;
-  }
-  
-  .page__section {
+}
+
+.page__section {
 	max-width: 880px;
 	width: 100%;
 	position: relative;
 	margin: 0 auto;
-  }
-  
-  .page__content {
+}
+
+.page__content {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
-  }
-  
-  @media screen and (max-width: 768px) {
-	.page__content {
-	  padding-left: 20px;
-	  padding-right: 20px;
+}
+
+/* @media screen and (min-width: 320px) and (max-width: 760px) and (min-width: 760px) and (max-width: 1100px)  */
+
+@media screen and (max-width: 920px) {
+	.page__section {
+		width: calc(100% - 38px);
 	}
-  }
-  
+}
