--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -38,17 +38,17 @@
 }
 
 .modal__close {
-  background-image: url("../images/close-button.svg");
-  position: absolute;
-  bottom: calc(100% + 5px);
-  left: calc(100% + 5px);
+  background-image: url(../images/close_icon.svg);
   border: none;
+  position: absolute;
+  top: -45px;
+  right: -45px;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-size: contain;
   width: 40px;
   height: 40px;
   cursor: pointer;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-color: transparent;
 }
 
 .modal__close:hover {
