--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -38,22 +38,24 @@
 }
 
 .modal__close {
-  background-image: url(../images/close_icon.svg);
-  background-repeat: no-repeat;
-  margin: 0;
+  background-image: url("../images/close-button.svg");
   position: absolute;
-  right: -40px;
-  top: -40px;
-  height: 40px;
-  width: 40px;
+  bottom: calc(100% + 5px);
+  left: calc(100% + 5px);
   border: none;
-  background-color: rgba(0, 0, 0, 0);
+  width: 40px;
+  height: 40px;
   cursor: pointer;
-  transition: opacity ease-in-out 1s;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: transparent;
 }
 
 .modal__close:hover {
-  opacity: 60%;
+  opacity: 0.6;
+  transition: 0.5s ease-in;
+  cursor: pointer;
+}
 
 .modal__heading {
   font-family: "Inter";
